# oroi

./: .env.example  .gitignore  INTEGRACION.md  LICENSE  README.md  pyproject.toml
docs/: CNAME  demo.html  index.html
evaluation/: README.md  RUNBOOK-spreading.md  __init__.py  ablation.py  anonymize.py  baselines.py  conversation_drive.py  cost.py  generate.py  grading.py  harness.py  judge-final-n224.txt  judge-guard-v2.txt  judge-results.txt  judge.py  locomo-pilot-results.txt  locomo-pilot-smart.txt  locomo.py  metrics.py  run-equalizes-results.txt  run-final-n224.txt  run-guard-extractorv2.txt  run.py  scenario.py  spreading-results.txt  spreading.py
evaluation/corpus/: actualizacion.jsonl  coche-rojo.jsonl  distractores.jsonl
examples/: demo_conversation.py
src/oroi/: __init__.py  cli.py  consciousness.py  mind.py
src/oroi/chat/: loop.py  session.py  web.py
src/oroi/consolidation/: consolidator.py
src/oroi/core/: activation.py  config.py  graph.py  retrieval.py  store.py
src/oroi/extraction/: extractor.py  schema.py
src/oroi/providers/: anthropic_chat.py  azure.py  base.py  claude_session.py  openai_compat.py  settings.py
src/oroi/viz/: graph_view.py  replay.py
tests/: conftest.py  test_activation.py  test_chat.py  test_config.py  test_consciousness.py  test_consolidation.py  test_extraction.py  test_retrieval.py  test_store.py  test_viz.py
